--- a/kirish.html
+++ b/kirish.html
@@ -14,6 +14,6 @@
             <input type="button" value="saqlash" id="btn">
         </form>
     </div>
-    <script src="./login.js"></script>
+    <script src="./js/login.js"></script>
 </body>
 </html>
