--- a/register.html
+++ b/register.html
@@ -18,6 +18,6 @@
             <input type="button" value="saqlash" id="btn">
         </form>
     </div>
-    <script src="./app.js"></script>
+    <script src="./js/app.js"></script>
 </body>
 </html>
